--- a/client/HTML/AddNewStocks.html
+++ b/client/HTML/AddNewStocks.html
@@ -49,6 +49,10 @@
                   <div class="col-sm-10">
                     <input type="text" class="form-control" id="product-name-self-input" />
                   </div>
+                  <label for="product-imageURL-self-input" class="col-form-label">***Paste the image URL of the new product:</label>
+                  <div class="col-sm-10">
+                    <input type="text" class="form-control" id="product-imgURL-self-input" />
+                  </div>
                   <p id="product-existed-message" class="message-display" hidden>This product already exists</p>  
                 </div>
               </div>
