--- a/client/HTML/AddNewStocks.html
+++ b/client/HTML/AddNewStocks.html
@@ -110,7 +110,7 @@
               </div>
               <!-- SUBMIT BUTTON -->
               <div style="margin-top: 30px">
-                <button type="submit" class="btn btn-danger" id="submit-button" disabled>Add Products</button>
+                <button type="submit" class="btn btn-danger" id="submit-button" disabled>Add Stock</button>
                 <a class="cancelBtn" href="./AdminInventoryDashboard.html">
                   <button type="button" class="btn btn-outline-secondary">Cancel</button>
                 </a>
@@ -125,6 +125,7 @@
     <!-- Boostrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <!-- My JS -->
+    <script src="../JS/FormFetchCalls.js"></script>
     <script src="../JS/FormFunctions.js"></script>
     <script src="../JS/AddNewStocks.js"></script>
         
