--- a/client/HTML/ContactUs.html
+++ b/client/HTML/ContactUs.html
@@ -13,7 +13,7 @@
     <!-- Navbar (if you want to keep the navigation consistent) -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">TTV</a>
+          <a class="navbar-brand" href="../HTML/LandingPage.html">TTV</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
