--- a/client/HTML/AddNewStocks.html
+++ b/client/HTML/AddNewStocks.html
@@ -114,7 +114,7 @@
                 <a class="cancelBtn" href="./AdminInventoryDashboard.html">
                   <button type="button" class="btn btn-outline-secondary">Cancel</button>
                 </a>
-                <p id="no-submit-message" hidden>Please make sure all data is correctly entered</p>
+                <p id="exitsted-stock-message" hidden></p>
               </div>
             </div>
           </div>
