--- a/client/HTML/AddNewStocks.html
+++ b/client/HTML/AddNewStocks.html
@@ -88,7 +88,7 @@
             <div class="col-4">
               <!-- VENDING MACHINE -->
               <div id= 'vending-machine-div'>
-                <label for="vending-machine" class="col-form-label">Vending Machine ID</label>
+                <label for="vending-machine" class="col-form-label">Vending Machine</label>
                 <!-- dropdown for VM -->
                 <div class="col-sm-10">
                   <input class="form-control" list="vending-machine-list" id="vending-machine" placeholder="Look up vending machine..." required/>
